--- a/GCMP_Analysis_Fall2024_V4.Rmd
+++ b/GCMP_Analysis_Fall2024_V4.Rmd
@@ -133,7 +133,7 @@ phylo_coral
 #seed set to 111 to keep result reproductive
 ############# Subsample Colombian region including E5 & E12 Cartagena Coast ################
 #### Subsample Colombia Expedition E5
-coral <-subset_samples(phylo_coral, sample_type_EMP == "coral" & outgroup == "n") # all corals without out groups, environmental samples & subset expeditions (i.e, singapore).
+coral <-subset_samples(phylo_coral, sample_type_EMP == "coral" & outgroup == "n" & within_group == "yes") # all corals without out groups, environmental samples & subset expeditions (i.e, singapore).
 coral
 
 # rarefy to even depth
@@ -247,7 +247,7 @@ panama.e.rarefied
 #env.rarefied
 
 #### Water 
-water <- subset_samples(phylo_coral, sample_type == "Reef Water" & political_area == "Colombia")
+water <- subset_samples(phylo_coral, sample_type == "Reef Water")# & political_area == "Colombia")
 water
 
 # keep result reproductive
@@ -295,7 +295,7 @@ skeleton.rarefied = rarefy_even_depth(skeleton, rngseed=111, sample.size=2000, r
 skeleton.rarefied
 
 ## Aglomerate Taxa to Family Level
-glom_coral <- tax_glom(coral.rarefied, taxrank = 'Family', NArm = TRUE) ## 386 Samples 
+glom_coral <- tax_glom(coral.rarefied, taxrank = 'Family', NArm = TRUE) ## 448 Samples 
 #glom_col <- tax_glom(colombia.rarefied, taxrank = 'Family', NArm = TRUE)##  150 samples
 glom_col5 <- tax_glom(colombia.rarefied5, taxrank = 'Family', NArm = TRUE)## 65 samples
 glom_col12 <- tax_glom(colombia.rarefied12, taxrank = 'Family', NArm = TRUE)## 85 samples
@@ -349,7 +349,6 @@ sncm.fit <- function(spp, pool=NULL, stats=TRUE, taxon=NULL){
 spp.bi <- 1*(spp>0)
 freq <- apply(spp.bi, 2, mean)
 freq <- freq[freq != 0]
-
 #Combine
 C <- merge(p, freq, by=0)
 C <- C[order(C[,2]),]
@@ -369,12 +368,12 @@ m.ci <- confint(m.fit, 'm', level=0.95)
 	
 ##Fit neutral model parameter m (or Nm) using Maximum likelihood estimation (MLE)
 sncm.LL <- function(m, sigma){
-	R = freq - pbeta(d, N*m*p, N*m*(1-p), lower.tail=FALSE) #pbeta Density, distribution function, quantile function and random generation for the Beta distribution with parameters shape1 and shape2 (and optional non-centrality parameter ncp).
-	R = dnorm(R, 0, sigma) # dnorm Density, distribution function, quantile function and random generation for the normal distribution with mean equal to mean and standard deviation equal to sd.
+	R = freq - pbeta(d, N*m*p, N*m*(1-p), lower.tail=FALSE)
+	R = dnorm(R, 0, sigma)
 	-sum(log(R))
 }
 	
-m.mle <- mle(sncm.LL, start=list(m=0.1, sigma=0.1), nobs=length(p), method="Nelder-Mead")
+m.mle <- mle(sncm.LL, start=list(m=0.1, sigma=0.1), nobs=length(p),"Nelder-Mead")
 
 ##Calculate Akaike's Information Criterion (AIC)
 aic.fit <- AIC(m.mle, k=2)
@@ -385,7 +384,7 @@ freq.pred <- pbeta(d, N*coef(m.fit)*p, N*coef(m.fit)*(1-p), lower.tail=FALSE)
 Rsqr <- 1 - (sum((freq - freq.pred)^2))/(sum((freq - mean(freq))^2))
 RMSE <- sqrt(sum((freq-freq.pred)^2)/(length(freq)-1))
 	
-pred.ci <- binconf(freq.pred*nrow(spp), nrow(spp), alpha=0.05, method="wilson", return.df=TRUE)
+pred.ci <- binconf(freq.pred*nrow(spp), nrow(spp), alpha=0.01, method="wilson", return.df=TRUE)
 	
 ##Calculate AIC for binomial model
 bino.LL <- function(mu, sigma){
@@ -421,27 +420,17 @@ pois.pred <- ppois(d, N*p, lower.tail=FALSE)
 Rsqr.pois <- 1 - (sum((freq - pois.pred)^2))/(sum((freq - mean(freq))^2))
 RMSE.pois <- sqrt(sum((freq - pois.pred)^2)/(length(freq) - 1))
 
-pois.pred.ci <- binconf(pois.pred*nrow(spp), nrow(spp), alpha=0.01, method="wilson", return.df=TRUE)
-
-
-## Calculate pvalue from Wilson CI intervals 
-
-low <- pred.ci[,2]
-high <- pred.ci[,3]
-se <- (high-low)/(2*1.96)
-zstat <- (freq/se)
-padj <- (exp(-0.717*zstat-0.416*zstat^2))*N
+pois.pred.ci <- binconf(pois.pred*nrow(spp), nrow(spp), alpha=0.05, method="wilson", return.df=TRUE)
 
 ##Results
 	if(stats==TRUE){
-		fitstats <- data.frame(m=numeric(), m.ci=numeric(), m.mle=numeric(), maxLL=numeric(), binoLL=numeric(), poisLL=numeric(), Rsqr=numeric(), Rsqr.bino=numeric(), Rsqr.pois=numeric(), RMSE=numeric(), RMSE.bino=numeric(), RMSE.pois=numeric(), AIC=numeric(), BIC=numeric(), AIC.bino=numeric(), BIC.bino=numeric(), AIC.pois=numeric(), BIC.pois=numeric(), N=numeric(), Samples=numeric(), Richness=numeric(), Detect=numeric(), se=numeric(), zstat=numeric(),padj=numeric())
-	
-			fitstats[1,] <- c(coef(m.fit), coef(m.fit)-m.ci[1], m.mle@coef['m'], m.mle@details$value, bino.mle@details$value, pois.mle@details$value, Rsqr, Rsqr.bino, Rsqr.pois, RMSE, RMSE.bino, RMSE.pois, aic.fit, bic.fit, aic.bino, bic.bino, aic.pois, bic.pois, N, nrow(spp), length(p), d, se,zstat,padj)
+		fitstats <- data.frame(m=numeric(), m.ci=numeric(), m.mle=numeric(), maxLL=numeric(), binoLL=numeric(), poisLL=numeric(), Rsqr=numeric(), Rsqr.bino=numeric(), Rsqr.pois=numeric(), RMSE=numeric(), RMSE.bino=numeric(), RMSE.pois=numeric(), AIC=numeric(), BIC=numeric(), AIC.bino=numeric(), BIC.bino=numeric(), AIC.pois=numeric(), BIC.pois=numeric(), N=numeric(), Samples=numeric(), Richness=numeric(), Detect=numeric())
+		fitstats[1,] <- c(coef(m.fit), coef(m.fit)-m.ci[1], m.mle@coef['m'], m.mle@details$value, bino.mle@details$value, pois.mle@details$value, Rsqr, Rsqr.bino, Rsqr.pois, RMSE, RMSE.bino, RMSE.pois, aic.fit, bic.fit, aic.bino, bic.bino, aic.pois, bic.pois, N, nrow(spp), length(p), d)
 		return(fitstats)
 	} else {
-	A <- cbind(p, freq, freq.pred, pred.ci[,2:3], bino.pred, bino.pred.ci[,2:3], low, high, zstat, padj)
+	A <- cbind(p, freq, freq.pred, pred.ci[,2:3], bino.pred, bino.pred.ci[,2:3])
 	A <- as.data.frame(A)
-		colnames(A) <- c('relative abundance (p)', 'frequency', 'freq.predidction', 'pred.lwr', 'pred.upr','z-statistic', 'padj','low_test','high_test')
+		colnames(A) <- c('p', 'freq', 'freq.pred', 'pred.lwr', 'pred.upr', 'bino.pred', 'bino.lwr', 'bino.upr')
 		if(is.null(taxon)){
 			B <- A[order(A[,1]),]
 		} else {
@@ -475,7 +464,7 @@ addf = function(freq, pred.upr, pred.lwr) {
 ###coral communities
 set.seed(111)
 coral <- 0
-coral <- prune_taxa(taxa_sums(glom_col12) > 0, glom_col12)
+coral <- prune_taxa(taxa_sums(glom_coral) > 0, glom_coral)
 coral
 otu_coral = as.data.frame(t(otu_table(coral)))
 
@@ -495,15 +484,15 @@ mod1_w_coral$model <- factor(mod1_w_coral$model,
                              levels = c("above", "neutral", "below"))
 
 ## Assign Taxonomy to table of significant microbes
-coral_taxa = cbind(as(mod1_w_coral, "data.frame"), as(tax_table(glom_pane)[rownames(mod1_w_coral), ], "matrix"))
+coral_taxa = cbind(as(mod1_w_coral, "data.frame"), as(tax_table(glom_coral)[rownames(mod1_w_coral), ], "matrix"))
 #coral_taxa
-write.csv(coral_taxa,"Panama E12 Coral Samples Neutral Taxonomy table.csv",row.names = TRUE)
+write.csv(coral_taxa,"Corals from E2 E5 E11 E12 E15 Neutral Taxonomy table.csv",row.names = TRUE)
 
 
 set.seed(111)
 ###seawater communities
 #seawater <- subset_samples(physeq2, SampleType == "seawater")
-seawater <- prune_taxa(taxa_sums(glom_col5) > 0, glom_col5 )
+seawater <- prune_taxa(taxa_sums(glom_wat) > 0, glom_wat )
 seawater
 
 otu_seawater = as.data.frame(t(otu_table(seawater)))
@@ -521,7 +510,7 @@ mod1_w_seawater$model <- factor(mod1_w_seawater$model,
                                 levels = c("above", "neutral", "below"))
 
 ## Assign Taxonomy to table of significant microbes
-env_taxa = cbind(as(mod1_w_seawater, "data.frame"), as(tax_table(glom_col5)[rownames(mod1_w_seawater), ], "matrix"))
+#env_taxa = cbind(as(mod1_w_seawater, "data.frame"), as(tax_table(glom_cglom_watol5)[rownames(mod1_w_seawater), ], "matrix"))
 
 write.csv(env_taxa,"Colombia E5 Samples Neutral Taxonomy table.csv",row.names = TRUE)
 
@@ -556,7 +545,7 @@ p_neuM_coral=ggplot(mod1_w_coral, aes(x=log10(p), y=freq, color = model))+
 
 lb1 <- mod_w_coral$Rsqr
 lb2 <- mod_w_coral$m
-lb3 <- expression(paste("Colombia E5 Coral Samples"))
+lb3 <- expression(paste("Corals from E2 E5 E11 E12 E15 Coral Samples"))
 
 p_neuM_coral1 = p_neuM_coral + annotate("text", x = -3.5, y=0.7, size=6.5, label=lb1, 
                                         fontface="bold", color="black",
@@ -594,7 +583,7 @@ p_neuM_seawater=ggplot(mod1_w_seawater, aes(x=log10(p), y=freq, color = model))+
 
 ev1 <- mod_w_seawater$Rsqr
 ev2 <- mod_w_seawater$m
-ev3 <- expression(paste("Colombian Environmental Samples"))
+ev3 <- expression(paste("Colombian Water  Samples"))
 
 p_neuM_seawater1 = p_neuM_seawater + annotate("text", x = -3.5, y=0.7, size=6.5, label=ev1, 
                                               fontface="bold", color="black",
@@ -688,7 +677,7 @@ coral_df <- data.frame(sample_data(coral.rarefied))
 # Ordination from Distance Matrix and PCoA Plots 
 ```{r}
 ##Calculate the PCoA on Complex Corals
-rt.pcoa = ordinate(coral.rarefied, method="PCoA", distance=uni_coral)
+rt.pcoa = ordinate(coral.rarefied, method="PCoA", distance=wuni_coral)
 # Set variables to zero for subsequent changes
 # expedition_number
 pcoa<-0
@@ -715,9 +704,9 @@ for (i in distance_methods){
 
 ## Post-hoc comparison between Coral Compartments and Location
 
-bray_carib_pairwise <-pairwise.perm.manova(bray_coral, coral_df$sample_type,nperm=1000,p.method = "BH") 
-uni_carib_pairwise <-pairwise.perm.manova(uni_coral,coral_df$sample_type,nperm=1000,p.method = "BH")
-wuni_carib_pairwise <-pairwise.perm.manova(wuni_coral,coral_df$sample_type,nperm=1000,p.method = "BH")
+bray_carib_pairwise <-pairwise.perm.manova(bray_coral, coral_df$expedition_number,nperm=1000,p.method = "BH") 
+uni_carib_pairwise <-pairwise.perm.manova(uni_coral,coral_df$expedition_number,nperm=1000,p.method = "BH")
+wuni_carib_pairwise <-pairwise.perm.manova(wuni_coral,coral_df$expedition_number,nperm=1000,p.method = "BH")
 
 ```
 
