latest updates to Neutral model analysis. Included expedition 3 from Australia. I ran the model for E10 Mucus at the order level because family level stopped the model. Outputs have been logged for each run. These files contain n_smples, above_mean below_mean and microbial(n) column to comparative table.

--- a/Neutral Model Analysis/procedure/GCMP_Caribbean_Analysis_v2.Rmd
+++ b/Neutral Model Analysis/procedure/GCMP_Caribbean_Analysis_v2.Rmd
@@ -47,18 +47,18 @@ library(picante)
 ```{r}
 
 #Import from .qza file into a phyloseq object
-asv <- qza_to_phyloseq(features = "../input/carib_silva_merged_table.qza")
+asv <- qza_to_phyloseq(features = "./Atlantic_Pacific_expeditions/input/nomito_table.qza")
 
 #### Import Metadata read.table
-metadata <- read.table(file = "../input/carib_merged_mapping.csv",header=T,comment.char="", row.names=1, sep=",")
+metadata <- read.table(file = "./Atlantic_Pacific_expeditions/input/carib_merged_mapping.csv",header=T,comment.char="", row.names=1, sep=",")
 
 ### Import Tree file from biom output tree.nwk
-tree <- read_tree("../input/tree.nwk")
+tree <- read_tree("./Atlantic_Pacific_expeditions/input/tree.nwk")
 
-coral_tree <-read_tree("../input/huang_roy_tree.newick")
+coral_tree <-read_tree("./Atlantic_Pacific_expeditions/input/huang_roy_tree.newick")
 
 ### Import taxonomy from biom output as .tsv format using read.table
-taxonomy <- read.table(file = "../input/taxonomy.tsv", sep = "\t", header = T ,row.names = 1, )
+taxonomy <- read.table(file = "./Atlantic_Pacific_expeditions/input/taxonomy.tsv", sep = "\t", header = T ,row.names = 1, )
 
 # clean the taxonomy
 
